# collation-fixer

./: app.py  pyproject.toml
colfixer/: core.py  settings.py
