[project]
name = "collation-fixer"
version = "0.0.1"
requires-python = "~=3.8"
dependencies = [
    "mysqlclient>=1.3.14",
    "privex-helpers",
    "python-dotenv",
    "colorama",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
